--- a/WindowsFormsFileControl/WindowsFormsFileControl.csproj
+++ b/WindowsFormsFileControl/WindowsFormsFileControl.csproj
@@ -63,6 +63,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="test_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="test_Form.Designer.cs">
+      <DependentUpon>test_Form.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -79,6 +85,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="test_Form.resx">
+      <DependentUpon>test_Form.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="ClassDiagram1.cd" />
     <None Include="Properties\DataSources\fileeee.datasource" />
     <None Include="Properties\Settings.settings">
@@ -96,6 +105,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\ic_close_black_18dp_1x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="SQLCreateDate.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
